# riy-datos-t1

./: .env  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  api-config.ts  main.tsx  msalConfig.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  db.rs  errors.rs  lib.rs  license.rs  main.rs  menu.rs  mod-no.rs  models.rs  user.rs
src-tauri/src/api/: errors.rs  main.rs  mod.rs  msal_security_logic.rs  utils.rs
src-tauri/src/api/routes/: auth_route.rs  license_route.rs  menu_route.rs  mod.rs  user_route.rs
src-tauri/src/middleware/: auth_middleware.rs
src-tauri/src/shared/: app_errors.rs  auth.rs  config.rs  db.rs  license_logic.rs  menu_logic.rs  menu_models.rs  mod.rs  models.rs  state.rs  user_logic.rs  user_repository.rs  utils.rs
src-tauri/src/shared/auth_providers/: google.rs  jwks_security.rs  microsoft.rs  mod.rs
src-tauri/src/shared/config/: backendSecurityMap.ts  permissionLabels.ts  permissions.ts
src-tauri/src/shared/middleware/: auth_claims.rs  auth_middleware.rs  mod.rs
src/components/: ActionMenu.css  ActionMenu.tsx  CredentialScreen.tsx  DataForm.css  DataForm.tsx  DetailsModal.css  DetailsModal.tsx  DropdownSubmenu.css  DropdownSubmenu.tsx  ERPUserSearch.css  ERPUserSearch.tsx  ListaDeRolesContent.tsx  ListaDeUsuariosContent.css  ListaDeUsuariosContent.tsx  LoginMSALPage.tsx  LoginPage.tsx  LoginScreen.tsx  MainAppFrame.tsx  MainLayout.css  MainLayout.tsx  MainMenu.tsx  Menu.css  Menu.tsx  MenuItem.tsx  MenuList.tsx  Portal.tsx  ProtectedRoute.tsx  ResponsiveDropdownMenu.css  ResponsiveDropdownMenu.tsx  ResponsiveTabMenu.css  ResponsiveTabMenu.tsx  TabMenu.css  TabMenu.tsx  Tabs.css  Tabs.tsx  UsersPage.css  UsersPage.tsx
src/components/AdministracionUsuarios/: ActionDropdown.css  ActionDropdown.tsx
src/contexts/: AuthContext.tsx  LayoutContext.tsx  PermissionContext.tsx  TemporaryPermissionContext.tsx  TitleContext.tsx  UserContext.tsx
src/data/: menuStructure.tsx
src/hooks/: usePermissions.ts
src/layouts/: AdministracionUsuariosLayout.css  AdministracionUsuariosLayout.tsx  MainLayout.css  MainLayout.tsx  UsuariosLayout.tsx  WindowLayout.css  WindowLayout.tsx
src/layouts/Usuarios/: UsersLayout.css  UsersLayout.tsx
src/pages/: About.tsx  AdministracionUsuarios.tsx  EmptyPage.tsx  Forbidden.tsx  GenericPage.tsx  GenericPage2.tsx  GenericPage3.tsx  GenericPage4.tsx  GenericPage5.tsx  Home.tsx  ListaDeModulosContent.tsx  ListaDeRolesContent.tsx  ListaDeUsuariosContent.css  ListaDeUsuariosContent.tsx  Login.css  Login.tsx  NotFound.tsx
src/pages/Usuarios/: AdministracionUsuarios.tsx  ListaDeUsuarios.tsx  ListaDeUsuariosContent.tsx  RoleList.tsx  UserList.tsx  Users.tsx
src/routes/: AppRouter.tsx  routeUtils.tsx
src/services/: auth-service.ts  license-service.ts  menu-service.ts  user-service.ts
src/types/: api-types.ts  license.ts  menu.ts  permissions.ts  user.ts
src/utils/: .env.production  api-client.ts  api-service.ts  menu-helper.ts  routeUtils.ts  titleUtils.ts
