[package]
name = "riy-datos-t1"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
actix-cors = "0.6.4"
dotenv = "0.15.0"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
url = "2.5.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls", 
    "any", 
    "mssql",
    "chrono", 
    "uuid", 
    "macros",
] }
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.10.1"

# Token 2025-08.16 RichardG
# ✅ AHORA: Usa la última versión para asegurar soporte de claves modernas
# ✅ AÑADIR/CONFIRMAR:
jsonwebtoken = "9" 
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } # Cliente HTTP Tokio 1.x


rand = "0.8" # generar números aleatorios,
futures-util = "0.3.30"
futures = "0.3.31"


# Para obtener la clave pública de Microsoft (JWKS) (opcional pero recomendado)
# reqwest = { version = "0.11", features = ["json", "tokio-native-tls"] } # 👈 Necesita TLS para HTTPS de Azure
# lazy_static = "1.4" # Solo si quieres usar la constante JWKS_URL como lazy_static


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "shared_lib"
path = "src/shared/mod.rs"

[[bin]]
name = "riy-datos-t1" #riy-app
path = "src/main.rs"

[[bin]]
name = "riy-web-api"
path = "src/api/main.rs"
