[package]
name = "riy-datos-t1"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "window-all"] }
# ✅ Mantener para serialización/deserialización
serde = { version = "1", features = ["derive"] } 
serde_json = "1"

# ✅ Web Framework
actix-web = "4" 
actix-cors = "0.6.4"
# ✅ Entorno
dotenv = "0.15.0"
# ✅ Cliente HTTP para descargar claves de B2C
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# Nueva dependencia necesaria para el manejo de JWKS (claves de validación de JWTs de MSAL)
jwks-rs = "0.1.0"
# ✅ Core de la validación JWT
jsonwebtoken = "9" 

# ✅ Async Runtime (Asegurar que sea compatible con Actix-web 4 y Tauri)
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] } 

# Otros componentes
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
url = "2.5.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "any", "mssql", "chrono", "uuid", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.10.1"
rand = "0.8"
futures-util = "0.3.30"
futures = "0.3.31"
# ✅ Manejo de errores
anyhow = "1.0" 
lazy_static = "1.4"
log = "0.4"
bcrypt = "0.15"

[features]
# by default we use Tauri's application flow
default = [ "custom-protocol" ]
# this is used when running desktop apps
custom-protocol = [ "tauri/custom-protocol" ]
# this is used when running web apps
web = []


[lib]
name = "shared_lib"
path = "src/shared/mod.rs"

[[bin]]
name = "riy-datos-t1" #riy-app
path = "src/main.rs"

[[bin]]
name = "riy-web-api"
path = "src/api/main.rs"
